# api/docs/swagger.yaml
@@ -32,6 +32,21 @@ definitions:
       user_id:
         type: string
     type: object
+  bazaar_internal_modules_user.CreateUserRequest:
+    properties:
+      company_id:
+        type: string
+      first_name:
+        type: string
+      last_name:
+        type: string
+      password:
+        type: string
+      phone:
+        type: string
+      role_id:
+        type: string
+    type: object
   bazaar_internal_modules_user.User:
     properties:
       company_id:
@@ -194,6 +209,47 @@ paths:
       summary: Readiness probe
       tags:
       - Health
+  /user:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: User creation data
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/bazaar_internal_modules_user.CreateUserRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/bazaar_internal_modules_user.User'
+        "400":
+          description: Invalid creditial data
+          schema:
+            type: string
+        "409":
+          description: Phone already registered
+          schema:
+            type: string
+        "422":
+          description: Invalid input
+          schema:
+            type: string
+        "500":
+          description: Internal error
+          schema:
+            type: string
+        "503":
+          description: Service unavailable
+          schema:
+            type: string
+      summary: Create a new user
+      tags:
+      - Auth
 securityDefinitions:
   BearerAuth:
     description: Type "Bearer" followed by a space and JWT token.
